<resources>
    <string name="app_name" translatable="false">CarCollector</string>
    <string name="app_description">Car Collector enables you to maintain your car collection and alerts you when the service is needed or if there are any problems.\n\nIt allows you to add pictures of your cars so you can easily show your collection.</string>
    <string name="app_author" translatable="false">Črt Goričan</string>
    <string name="app_version" translatable="false">1.0</string>

    <string name="logo_alt_text">App logo</string>
    <string name="path_saved_data_file" translatable="false">car_collector_data.json</string>

    <!-- AboutActivity -->
    <string name="label_app_name">App name</string>
    <string name="label_app_description">Description</string>
    <string name="label_author">Author</string>
    <string name="label_version">Version</string>

    <!-- SetOwnerActivity -->
    <string name="car_make">Make</string>
    <string name="car_model">Model</string>
    <string name="car_year_of_production">Year</string>
    <string name="car_horsepower">Power (hp)</string>
    <string name="car_mileage">Mileage (km)</string>
    <string name="car_price">Price (€)</string>

    <string name="car_make_hint" translatable="false">Porsche</string>
    <string name="car_model_hint" translatable="false">964</string>
    <string name="car_year_of_production_hint" translatable="false">1991</string>
    <string name="car_horsepower_hint" translatable="false">380</string>
    <string name="car_mileage_hint" translatable="false">530</string>
    <string name="car_price_hint" translatable="false">125400</string>

    <!-- SetOwnerActivity -->
    <string name="owner_first_name">First name</string>
    <string name="owner_last_name">Last name</string>

    <string name="owner_first_name_hint">Bob</string>
    <string name="owner_last_name_hint">Smith</string>

    <!-- Buttons -->
    <string name="btn_to_set_owner_activity">Set owner</string>
    <string name="btn_info">Info</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_return">Back</string>
    <string name="btn_confirm">Confirm</string>

    <string name="btn_add_car">Add</string>
    <string name="btn_about">About</string>
    <string name="btn_qr_scanner">Scan QR</string>

    <!-- Content description -->
    <string name="desc_btn_add_car">Add a new car to the collection</string>
    <string name="desc_btn_about">About the app</string>
    <string name="desc_btn_scan_qr_code">Scan the QR code</string>
    <string name="noun_car_single">car</string>
    <string name="noun_car_plural">cars</string>
    <string name="no_cars">No cars</string>
    <string name="noun_car_double">cars</string>
    <string name="activity_title_main">Car collection</string>
    <string name="activity_title_about">About</string>
    <string name="activity_title_input">Add a car</string>
    <string name="activity_title_set_owner">Set owner</string>
    <string name="noun_collection">collection</string>
    <string name="error_empty_fields_all">Please, fill out the fields!</string>
    <string name="error_invalid_first_name">Invalid first name!</string>
    <string name="error_invalid_last_name">Invalid last name!</string>
    <string name="error_scan_failed">Scan failed!</string>
    <string name="error_invalid_qr_code">Invalid QR code!</string>
    <string name="prompt_scan_qr_code">Scan the QR code.</string>
    <string name="error_invalid_car_year">Invalid year!</string>
    <string name="error_invalid_car_hp">Invalid horsepower!</string>
    <string name="error_invalid_car_mileage">Invalid mileage!</string>
    <string name="error_invalid_car_price">Invalid price!</string>
    <string name="activity_title_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="label_uuid" translatable="false">UUID</string>
    <string name="noun_uuid" translatable="false">UUID</string>
    <string name="path_shared_pref" translatable="false">ShrPref</string>
    <string name="shared_pref_view_type" translatable="false">ViewType</string>
    <string name="shared_pref_notifications" translatable="false">Notifications</string>
    <string name="label_view_type">View</string>
    <string-array name="view_types">
        <item>List</item>
        <item>Grid</item>
    </string-array>
    <string name="desc_spinner_view_type">Select view type</string>
    <string name="label_notifications">Notifications</string>
    <string name="label_analytics_launches" translatable="false">Launches</string>
    <string name="label_analytics_sent_to_background" translatable="false">Sent to background</string>
    <string name="label_analytics_activity_about" translatable="false">About</string>
    <string name="label_analytics_activity_analytics" translatable="false">Analytics</string>
    <string name="label_analytics_activity_car_input" translatable="false">Car input</string>
    <string name="label_analytics_activity_main" translatable="false">Main</string>
    <string name="label_analytics_activity_set_owner" translatable="false">Set owner</string>
    <string name="label_analytics_activity_settings" translatable="false">Settings</string>
    <string name="sub_title_analytics">By activities</string>
    <string name="activity_title_analytics">Analytics</string>
    <string name="noun_analytics">Analytics</string>
    <string name="noun_update">Update</string>
    <string name="noun_delete">Delete</string>
    <string name="noun_cancel">Cancel</string>
    <string name="shared_pref_dark_mode" translatable="false">DarkMode</string>
    <string name="label_dark_mode">Dark mode</string>
</resources>